<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                android:inputType="textCapWords"
                android:padding="16dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_item_quant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Quantity"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/saleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/item_sold" />

            <TextView
                android:id="@+id/quant_counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/new_shipment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/new_shipment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_item_quant_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/insert_quantity"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price: $"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/item_price"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="Take Photo" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/insertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert" />

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_order" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>

</ScrollView>